<resources>
    <string name="app_name">Tattoo Studio</string>
    <string name="title_activity_main2">MainActivity</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="name">Name:</string>
    <string name="hint_name">Name.</string>
    <string name="e_mail">E_Mail:</string>
    <string name="hint_Email">E_Mail address.</string>
    <string name="add_client">Add Client</string>
    <string name="hint_phone">(__)_____-____</string>
    <string name="phone_number">Phone number:</string>
    <string name="set_date">Set Date</string>
    <string name="birth_date">Birth Date:</string>
    <string name="username">Username:</string>
    <string name="cpf">CPF:</string>
    <string name="password">Password:</string>
    <string name="verify_password">Verify Password:</string>
    <string name="create_account">Create Account</string>
    <string name="hint_cpf">___.___.___-__</string>
    <string name="login">Login</string>
    <string name="no_account_option">Don\'t have an account? Create one HERE</string>
    <string name="date_placeholder">XX/XX/XXXX</string>
    <string name="instagram">Instagram:</string>
    <string name="email_placeholder">XXXXX@XXXXX.com</string>
    <string name="phone_placeholder">(XX)XXXXX_XXXX</string>
    <string name="tattoos">Tattoos:</string>
    <string name="total_tattoo_cost">Total Tattoo cost: R$</string>
    <string name="value_placeholder">XX,XX</string>
    <string name="first_tattoo_date">First Tattoo date:</string>
    <string name="last_tattoo_date">Last Tattoo date:</string>
    <string name="text_placeholder">XXXXXXXXX</string>
    <string name="client_profile">Client Profile</string>
    <string name="number_placeholder">XX</string>
    <string name="description">Description…</string>
    <string name="log_out">Log Out</string>
    <string name="add_client_button">Add client button</string>
    <string name="add_tattoo_button">Add tattoo button</string>
    <string name="add_tattoo">Add tattoo</string>
    <string name="hint_add_description">Add description…</string>
    <string name="hint_value">R$ - - , - -</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_client_profile">Edit Client Profile</string>
</resources>