<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LogInActivity">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"
        android:text="@string/e_mail"
        app:layout_constraintBottom_toTopOf="@+id/editText_emailLogin"
        app:layout_constraintStart_toStartOf="@+id/editText_emailLogin" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText_emailLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_Email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@+id/editText_passwordLogin"
        app:layout_constraintTop_toBottomOf="@+id/editText_emailLogin" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText_passwordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/editText_emailLogin"
        app:layout_constraintStart_toStartOf="@+id/editText_emailLogin"
        app:layout_constraintTop_toBottomOf="@+id/textView_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/editText_passwordLogin"
        app:layout_constraintStart_toStartOf="@+id/editText_passwordLogin"
        app:layout_constraintTop_toBottomOf="@+id/editText_passwordLogin" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textAction_createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="16dp"
        android:text="@string/no_account_option"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

</androidx.constraintlayout.widget.ConstraintLayout>